@@ -1,3 +1,11 @@
+Mon Apr 28 18:06:08 2014  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* configure.in: check struct statvfs and struct statvfs.f_fstypename.
+
+	* configure.in: on NetBSD fstatfs is obsoleted.
+
+	* file.c: support NetBSD for File::Statfs.
+
 Mon Apr 28 17:42:42 2014  Narihiro Nakamura  <authornari@gmail.com>
 
 	* gc.c: This argument must be a pointer.
